fix: schedule visit button overlapping registration component on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1147,10 +1147,7 @@ img {
 
 @media (max-width: 1009px) {
   .registration .registration-schedule-visit {
-    position: absolute;
     left: 0;
-    transform: translate(50%, 0);
-    top: 93%;
   }
 }
 
